<resources>
    <string name="app_name">LitX</string>
    <string name="user_name">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="edit">✎</string>
    <string name="plus">+</string>
    <string name="logout">🚪➜</string>
    <string name="done">✓</string>
    <string name="profile_button">Profile</string>
    <string name="myBooks_button">My Books</string>
    <string name="exchange_button">Exchange</string>
    <string name="search_button">Search</string>
    <string name="request_button">Request</string>
    <string name="accept_button">Accepted</string>
    <string name="borrowing_button">Borrowed</string>
    <string name="top10">Top 10 Recommended Books on LitX</string>
    <string name="find">🔍</string>
    <string name="add_new">Add New</string>
    <string name="okay">Okay</string>
    <string name="add_button">Add</string>
    <string name="delete_button">Delete</string>
    <string name="done_button">Done</string>
    <string name="edit_button">Edit</string>
    <string name="borrowed_button">Borrowed</string>
    <string name="isbn">ISBN</string>
    <string name="scan_isbn">Scan ISBN</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="requests">Requests</string>
    <string name="requested_button">Requested</string>
    <string name="confirm_button">Confirm</string>
    <string name="clear_button">Clear</string>
    <string name="no_isbn">No ISBN</string>
    <string name="cancel_button">Cancel</string>
    <string name="invalid">Invalid field(s)</string>
    <string name="change_image">Click the photo to change the image!</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="requested">Request Sent!</string>
    <string name="accept_request_button">Accept</string>
    <string name="decline_request_button">Decline</string>
    <string name="updating">Updating...</string>
    <string name="finding">Finding...</string>
    <!-- For Mybooks Spinner -->
    <string-array name="spinnner_array">
        <item>All</item>
        <item>Available</item>
        <item>Requested</item>
        <item>Accepted</item>
        <item>Borrowed</item>
    </string-array>


    <!-- notification stuff -->
    <string name="channel_name">LitX</string>
    <string name="channel_description">A wild request has appeared.</string>
    <string name="Borrowed_Books">Borrowed Books</string>
    <string name="AcceptedRequests">Accepted Requests</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="receive">Receive</string>
    <string name="hand_over">Hand Over</string>
    <string name="borrower">Borrower</string>
    <string name="owner">Owner</string>
</resources>
