<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".AddBookActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/book_icon" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/round_edittext"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textCapWords"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAlignment="viewStart"
        android:textColor="#ffffff"
        android:textColorHint="#d3d3d3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editAuthor"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/round_edittext"
        android:ems="10"
        android:hint="@string/author"
        android:inputType="textCapWords"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAlignment="viewStart"
        android:textColor="#ffffff"
        android:textColorHint="#d3d3d3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />

    <EditText
        android:id="@+id/editISBN"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/round_edittext"
        android:ems="10"
        android:hint="@string/isbn"
        android:textColorHint="#d3d3d3"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAlignment="viewStart"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAuthor" />

    <Button
        android:id="@+id/btnISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="scanISBN"
        android:text="@string/scan_isbn"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toTopOf="@+id/btnOkay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOkay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/okay"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>